--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -1,129 +1,166 @@
-%littleFont { 
-    font-family: 'Lato' , sans-serif;
-    font-size: clamp(15px , 1.5vw , 70px);
+%littleFont {
+  font-family: "Lato", sans-serif;
+  font-size: clamp(15px, 1.5vw, 70px);
 }
 
-%absoluteCenter { 
-    position: absolute; 
-    left: 50%;
-    top: 50%;
-    transform: translate(-50% , -50%);
+%absoluteCenter {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
-*  { 
-    margin:0 ; 
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body { 
-    text-transform: uppercase;
+body {
+  text-transform: uppercase;
+  @extend %littleFont;
+  background: var(--bs-gradient);
+  height: 100vh;
+}
+
+.contain {
+  background: #fff;
+  height: 45vh;
+  max-width: 1200px;
+  min-width: 300px;
+  width: 65vw;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: -5px -15px 55px rgba(0, 0, 0, 0.596);
+  .box-player-0 {
+    width: 50%;
+    float: left;
+    height: 100%;
+    position: relative;
+  }
+  .box-player-1 {
+    width: 50%;
+    float: right;
+    height: 100%;
+    position: relative;
+  }
+  .name-player {
+    @extend %absoluteCenter;
+    top: 20%;
+    font-weight: 200;
+    font-size: clamp(15px, 1.9vw, 100px);
+  }
+  .global-score {
+    @extend %absoluteCenter;
+    top: 35%;
+    color: #eb4d4d;
+    font-size: clamp(15px, 7vw, 110px);
+    font-weight: 100
+  }
+}
+
+.dice {
+  @extend %absoluteCenter;
+  top: 45%;
+  width: 5vw;
+  height: 5vw;
+}
+
+.round-box {
+  font-family: "Lato", sans-serif;
+  background: #eb4d4d;
+  width: 5vw;
+  height: 8vh;
+  @extend %absoluteCenter;
+  top: 75%;
+  display: flex;
+  justify-content: center;
+  padding-top: 1vh;
+  font-size: clamp(10px, 0.5vw, 30px);
+  .round-score {
+    color: white;
+    @extend %absoluteCenter;
+    padding-top: 25px;
+    font-size: clamp(15px, 2.5vw, 50px);
+  }
+}
+button {
+  text-transform: uppercase;
+  background: transparent;
+  border: none;
+  font-size: clamp(10px, 1vw, 50px);
+  font-weight: 300;
+  min-width: 120px;
+  width: 15vw;
+  @extend %absoluteCenter;
+  i {
+    margin-right: 15px;
+    width: 40px;
+    height: 40px;
+  }
+  &:hover {
     @extend %littleFont;
-    background: var(--bs-gradient) ;
-    height: 100vh;
+  }
+  i {
+    color: red;
+    &:hover {
+      margin-right: 45px;
+    }
+  }
 }
 
-.contain { 
-    background: #fff;
-    height: 45vh;
-    max-width: 1200px;
-    width: 65vw;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50% , -50%);
-    box-shadow: -5px -15px 55px  rgba(0, 0, 0, 0.596);
-    .box-player-0 { 
-        width: 50%;
-        float: left;
-        height: 100%; 
-        position: relative;
-    }
-    .box-player-1 { 
-        width:50%; 
-        float: right; 
-        height: 100%;
-        position: relative;
-    }
-    .name-player { 
-        @extend %absoluteCenter; 
-        top: 20%;
-        font-weight: 200;
-        font-size: clamp(25px , 1.9vw , 100px);
-    }
-    .global-score {
-        @extend %absoluteCenter; 
-        top: 40%;
-        color: #EB4D4D;
-        font-size: clamp(25px , 3vw , 110px);
-    }
-
+.newGame {
+  top: 15%;
+}
+.roll {
+  top: 65%;
+}
+.hold {
+  top: 80%;
+}
+// JS
+.active {
+  background: #f1f1f1;
+}
+.activePlayer::after { 
+   content: '' ; 
+   width: 0.8vw;
+   height: 0.8vw;
+   border-radius: 50%; 
+   background: red;
+   display: block; 
+   position: relative;
+   top: 19%;
+   left: 75%;
 }
 
 
-.dice { 
-    @extend %absoluteCenter; 
-    top: 45%;
-    width: 5vw;
-    height: 5vw;
-}
-
-
-.round-box { 
-    background:#EB4D4D;
-    width: 5vw;
-    height: 8vh;
-    @extend %absoluteCenter;
-    top: 75%;
-    display: flex ;
-    justify-content: center;
-    padding-top: 1vh;
-    font-size: clamp(10px , 0.5vw , 30px);
-    .round-score { 
-        color:white;
-        @extend %absoluteCenter; 
-        padding-top: 25px ;
-        font-size: clamp(15px , 2.5vw , 50px);
-
+@media screen and (max-width: 960px ) {
+    .contain { 
+      width: 90vw;
+      height: 80vh
+    };
+    .round-box { 
+      width: 15vw;
+      height: 10vh;
+    }
+    .dice { 
+      width: 15vw;
+      height: 15vw;
+    }
+    .activePlayer::after { 
+      left: 75%;
     }
 }
-button { 
-    text-transform: uppercase;
-    background: transparent;
-    border: none;
-    font-size: clamp(15px ,1vw , 50px);
-    font-weight: 300;
-    min-width: 120px;
-    width: 15vw; 
-    @extend %absoluteCenter;
-    i { 
-        margin-right: 15px;
-        width: 40px; 
-        height: 40px;
-    }
-    &:hover { 
-        @extend %littleFont;
-        
-    }
-    i { 
-        color : red;
-        &:hover {
-            margin-right: 45px;
-        }
-    }
-    
-}
 
 
-.newGame { 
-    top: 15%;
-}
-.roll { 
-    top: 65%;
-}
-.hold { 
-    top : 80%
-}
-
-.active { 
-    background: #f1f1f1;
+@media screen and (min-width:480px) and(orientation:landscape) {
+    .round-box { 
+      height: 15vh;
+      width: 15vw;
+    }
+    .global-score { 
+      font-size: clamp(15px , 1.8vw , 50px);
+    }
 }
