--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -9,11 +9,16 @@
   top: 50%;
   transform: translate(-50%, -50%);
 }
+
+// Reset rapide 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
+
+
 
 body {
   text-transform: uppercase;
@@ -21,24 +26,26 @@ body {
   background: var(--bs-gradient);
   height: 100vh;
 }
-
+// Container du jeu 
 .contain {
   background: #fff;
-  height: 45vh;
-  max-width: 1200px;
+  height: 55vh;
+  max-width: 1600px;
   min-width: 300px;
-  width: 65vw;
+  width: 85vw;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   box-shadow: -5px -15px 55px rgba(0, 0, 0, 0.596);
+  // Joueur 1 
   .box-player-0 {
     width: 50%;
     float: left;
     height: 100%;
     position: relative;
   }
+  // Joueur 2
   .box-player-1 {
     width: 50%;
     float: right;
@@ -85,6 +92,8 @@ body {
     font-size: clamp(15px, 2.5vw, 50px);
   }
 }
+
+// Forme générale des boutons 
 button {
   text-transform: uppercase;
   background: transparent;
